--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <script src="js/myscript.js"></script>
 <body>
     <h1 class="main"> Next </h1>
-    <p>  <b>  text </b></p>
+    <p>  <b> text </b></p>
+    <P> Baba </P>
+    <h4>  baba  </h4>
+    <hr>    
 </body>
 </html>
