--- a/author.html
+++ b/author.html
@@ -48,7 +48,7 @@
         .container {
             width: 90%;
             max-width: 800px;
-            margin-top: 80px; /* Adjust margin to avoid overlap with fixed navbar */
+            margin-top: 80px; 
             padding: 20px;
             background: #ffffff;
             border-radius: 8px;
