--- a/company.html
+++ b/company.html
@@ -15,6 +15,7 @@
         <a href="company.html">Сторінка компанії</a>
         <a href="news.html">Сторінка новин</a>
         <a href="menu.html">Сторінка меню</a>
+        <a href="table.html">Додаткова інформація</a>
     </div>
 
     <div class="container">
