--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
 <title>Реєстрація користувача</title>
 <link rel="stylesheet" href="form.css">
 <script>
+    // вік 18+
     function validateAge() {
         var age = document.registration.age.value;
         if (age < 18) {
@@ -14,6 +15,7 @@
         return true;
     }
 
+    // парольчікі
     function validatePasswords() {
         var password = document.registration.password.value;
         var confirmPassword = document.registration.confirm_password.value;
@@ -24,14 +26,62 @@
         return true;
     }
 
+
     function validateForm() {
         return validateAge() && validatePasswords();
+    }
+
+    // події
+    window.onload = function() {
+        console.log("Сторінка повністю завантажена.");
+        alert("Сторінка повністю завантажена.");
+    };
+
+    window.onbeforeunload = function() {
+        return "Ви дійсно бажаєте покинути сторінку?";
+    };
+
+    window.onafterprint = function() {
+        alert("Документ успішно роздруковано.");
+    };
+
+    window.onbeforeprint = function() {
+        alert("Готується друк документу.");
+    };
+
+    window.onfocus = function() {
+        console.log("Вікно отримало фокус.");
+    };
+
+    window.onblur = function() {
+        console.log("Вікно втратило фокус.");
+    };
+
+    // Події H1 і H2
+    function highlightElement(element) {
+        element.style.backgroundColor = "#f0f8ff";
+        alert("Елемент активовано: " + element.tagName);
+    }
+
+    function resetHighlight(element) {
+        element.style.backgroundColor = "";
+    }
+
+    // елем форм
+    function runTask() {
+        var elements = document.forms["registration"].elements;
+        var elementList = "Елементи форми:\n";
+        for (var i = 0; i < elements.length; i++) {
+            elementList += elements[i].tagName + " - " + elements[i].name + "\n";
+        }
+        alert(elementList);
+        console.log(elementList);
     }
 </script>
 </head>
 <body>
 <div class="container">
-    <h1>Реєстрація користувача</h1>
+    <h1 onclick="highlightElement(this)" ondblclick="resetHighlight(this)">Реєстрація користувача</h1>
     <form id="registration" name="registration" method="post" action="submit_registration.php" accept-charset="UTF-8" onsubmit="return validateForm()">
         <fieldset>
             <legend>Особиста інформація</legend>
@@ -49,7 +99,7 @@
             <input type="number" id="age" name="age" placeholder="Ваш вік" min="18" required>
         </fieldset>
         <fieldset>
-            <legend>Додаткова інформація</legend>
+            <legend><h2 onclick="highlightElement(this)" ondblclick="resetHighlight(this)">Додаткова інформація </h2></legend>
             <label for="favorite_drink">Улюблений напій:</label>
             <select id="favorite_drink" name="favorite_drink" required>
                 <option value="beer">Пиво</option>
@@ -63,6 +113,7 @@
         </fieldset>
         
         <button type="submit">Зареєструватися</button>
+        <button type="button" onclick="runTask()">Run Task</button>
     </form>
 </div>
 </body>
